2008-02-06 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-common.h: Use proper dbus naming conventions.
	* data/DwellClick_Factory.server.in.in: Set bonobo environment. 

2008-02-06 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/dwell-click-applet.c: Add some error checking.

2008-02-05 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-ctw.c: 
	* data/ctw.glade:
	
	Fix input focus handling in click-type window.

2008-02-04 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-main.c: Improve --shutdown handling.

2008-02-04 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/Makefile.am: Remove some CFLAGS to be buildable on Solaris. 

	Fixes bug #188872 (launchpad). Patch by Li Yuan.

2008-01-31 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-main.c: Fix critical gconf error.
	Threshold option is integer, not float.

2008-01-27 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment to 2.21.91

2008-01-27 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS:

	Prepare for 2.21.90 release 

2008-01-22 Gerd Kohlberger <gerdk@svn.gnome.org>
	* man/mousetweaks.1
	* man/dwell-click-applet.1
	* man/pointer-capture-applet.1
	
	Update bug information and some restructuring.
	
2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* README:

	Fix version in README changed by mistake in revision 28

2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* man/dwell-click-applet.1:
	* man/pointer-capture-applet.1:

	Add man pages for the two panel applets

2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* man/mousetweaks.1:

	Differentiate minus and hyphen in man page

2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* README:

	Add homepage of mousetweaks to README

2008-01-21 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-main.c: Fix command-line -m switch to enable the correct mode.

2008-01-21 Gerd Kohlberger <gerdk@svn.gnome.org>
	* data/mousetweaks.schemas.in:
	* data/pointer-capture-applet.schemas.in: